update home page category section

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
 
 
             <!-- ************************************ -->
-            <!--      Banner Two Section End  Here    -->
+            <!--      Banner Two Section Start  Here   -->
             <!-- ************************************ -->
             <section class="">
                 <div class="my-container">
@@ -906,6 +906,13 @@
                     </div>
                 </div>
             </section>
+            <!-- *********************************** -->
+            <!--      Banner Two Section End  Here   -->
+            <!-- *********************************** -->
+
+
+
+
 
 
 
@@ -917,114 +924,153 @@
             <!-- ************************************ -->
             <section class="section-margin top-categories">
                 <div class="my-container">
-                    <div class="top-category my-w-100">
+                    <!--_____  Section Head   ______-->
+                    <div class="section-head my-text-center my-w-100 ">
+                        <h2 class="my- my-fw-bolder"> Featured Categories</h2>
+                        <p class="my-mt-0">Explore Our Categories</p>
+                    </div>
 
-                        <!--_____  Section Head   ______-->
-                        <div class="section-head my-text-center my-w-100 ">
-                            <h2 class="my- my-fw-bolder"> Featured Categories</h2>
-                            <p class="my-mt-0">Explore Our Categories</p>
+                    <div class="my-bg-white-off my-radius-md my-p-5">
+                        <div class="my-text-right">
+                            <a class="my-fw-bold my-d-flex my-align-center my-gap-1 my-justify-end my-text-primary my-pb-2 my-hover-underline"
+                                href="./Pages/all-category.html">All
+                                Category <i class="fa-solid  fa-arrow-right"></i></a>
                         </div>
 
-                        <!--______category Start______-->
-                        <div class="category-items my-grid-6 my-grid-lg-4 my-grid-sm-2  my-mt-6 my-gap-4">
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/category-bluebery.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Blue Bery
-                                </h6>
-                            </a>
+                        <div class="top-category my-w-100 ">
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
-                                <h6 class="my-text-center my-mt-2">
-                                    Package Items
-                                </h6>
-                            </a>
+                            <!--______category Start______-->
+                            <div class="category-items ">
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-bluebery.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Blue Bery
+                                    </h6>
+                                </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://freshcart.codescandy.com/assets/images/category/category-dairy-bread-eggs.jpg"
+                                        alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Ruty
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="https://i.ibb.co.com/LxhJq46/slider3.png" alt="slider3">
-                                <h6 class="my-text-center my-mt-2">
-                                    Vagetables
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://i.ibb.co.com/LCYvt9w/cart-4.jpg" alt="cart-4">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Package Items
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/category-bakery-biscuits.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Bakery Biscuits
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://i.ibb.co.com/LxhJq46/slider3.png" alt="slider3">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Vagetables
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/category-instant-food.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Instand Foods
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-bakery-biscuits.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Bakery Biscuits
+                                    </h6>
+                                </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-bakery-biscuits.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Bakery Biscuits
+                                    </h6>
+                                </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://freshcart.codescandy.com/assets/images/category/category-cleaning-essentials.jpg"
+                                        alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Cleaner
+                                    </h6>
+                                </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://freshcart.codescandy.com/assets/images/category/category-baby-care.jpg"
+                                        alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Baby Pad
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/pot-2.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Cleaning Items
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-instant-food.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Instand Foods
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/category-bakery-biscuits.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Bakery Biscuits
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/pot-2.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Cleaning Items
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/category-instant-food.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Instand Foods
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-bakery-biscuits.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Bakery Biscuits
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/pot-2.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Cleaning Items
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-instant-food.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Instand Foods
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="https://i.ibb.co.com/TgZ75nw/GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp.webp"
-                                    alt="GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp">
-                                <h6 class="my-text-center my-mt-2">
-                                    Baby Kit
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/pot-2.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Cleaning Items
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="https://target.scene7.com/is/image/Target/GUEST_90ab951e-0ce1-4ef4-a91f-e16b3009040e?wid=328&hei=328&qlt=80&fmt=webp"
-                                    alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Valantage Items
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://i.ibb.co.com/TgZ75nw/GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp.webp"
+                                        alt="GUEST-6e5826d3-d65a-4fce-9933-382a2f7d67ac-wid-315-hei-315-qlt-60-fmt-webp">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Baby Kit
+                                    </h6>
+                                </a>
 
-                            <!-- single category -->
-                            <a href="./Pages/category.html" class="item my-card ">
-                                <img src="./Static/images/category-instant-food.jpg" alt="">
-                                <h6 class="my-text-center my-mt-2">
-                                    Instand Foods
-                                </h6>
-                            </a>
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="https://target.scene7.com/is/image/Target/GUEST_90ab951e-0ce1-4ef4-a91f-e16b3009040e?wid=328&hei=328&qlt=80&fmt=webp"
+                                        alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Valantage Items
+                                    </h6>
+                                </a>
 
+                                <!-- single category -->
+                                <a href="./Pages/category.html" class="item my-card ">
+                                    <img src="./Static/images/category-instant-food.jpg" alt="">
+                                    <h6 class="my-text-center my-mt-2">
+                                        Instand Foods
+                                    </h6>
+                                </a>
+
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -5794,7 +5840,7 @@
         <script type="module">
             import { openModalF, closeButtonF, updateQuantity, bigImageChangeF, openSearchDropdown, deleteF, toggleF, activeF } from './Static/Js/utilitis.js';
 
-            // big image zoom in when hover
+            // big image zoom in when hover here
             document.addEventListener("DOMContentLoaded", function () {
                 const bigImage = document.getElementById('big-img');
 
@@ -5861,7 +5907,7 @@
 
 
 
-            // For Tabs
+            // For Tabs here
             function setupTabs(tabBtnSelector, tabContentSelector) {
                 const tabButtons = document.querySelectorAll(tabBtnSelector);
                 const tabContents = document.querySelectorAll(tabContentSelector);
@@ -5896,7 +5942,7 @@
 
 
 
-            // Tab products slider
+            // Tab products slider here
             var swiper = new Swiper(".tab-products", {
                 slidesPerView: 3, // Default for larger devices
                 spaceBetween: 30,
@@ -5933,7 +5979,7 @@
 
 
 
-            // discount timer
+            // discount timer here
             document.addEventListener("DOMContentLoaded", function () {
                 function startCountdown(selector, targetTime) {
                     const offerItems = document.querySelectorAll(selector);
