offer page added

--- a/index.html
+++ b/index.html
@@ -193,11 +193,12 @@
                                                     </li>
                                                 </ul>
 
-                                                <!--*****  related items  ******-->
+                                                <!--______  related items  ______-->
                                                 <ul class="related-items my-flex-column   my-gap-1">
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Noodes
                                                             <span class="related my-fw-bolder my-text-dark">mini
                                                                 pack</span>
@@ -207,9 +208,11 @@
                                                                 alt="related item ">
                                                         </div>
                                                     </li>
+
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Noodes lorem
                                                             <span class="related my-fw-bolder my-text-dark">mini
                                                                 pack</span>
@@ -222,7 +225,8 @@
 
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             baby toy item
                                                             <span class="related my-fw-bolder my-text-dark">price for
                                                                 bd</span>
@@ -234,7 +238,8 @@
 
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Noodes for baby
                                                             <span class="related my-fw-bolder my-text-dark">mini
                                                                 pack</span>
@@ -247,7 +252,8 @@
 
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Nodues
                                                             <span class="related my-fw-bolder my-text-dark">200gm</span>
                                                         </a>
@@ -258,7 +264,8 @@
                                                     </li>
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Noodes
                                                             <span class="related my-fw-bolder my-text-dark">mini
                                                                 pack</span>
@@ -271,7 +278,8 @@
 
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             baby toy item
                                                             <span class="related my-fw-bolder my-text-dark">price for
                                                                 bd</span>
@@ -283,7 +291,8 @@
 
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Noodes for baby
                                                             <span class="related my-fw-bolder my-text-dark">mini
                                                                 pack</span>
@@ -296,7 +305,8 @@
 
                                                     <!-- single history -->
                                                     <li class="single-history my-flex-between my-fw-bold">
-                                                        <a class="my-text-gray hover-primary-color" href="#">
+                                                        <a class="my-text-gray hover-primary-color"
+                                                            href="./Pages/product.html">
                                                             Nodues
                                                             <span class="related my-fw-bolder my-text-dark">200gm</span>
                                                         </a>
@@ -880,7 +890,7 @@
             <!-- ************************************ -->
             <section class="">
                 <div class="my-container">
-                    <div class="banner-two my-grid-2 my-gap-3">
+                    <div class="banner-two my-grid-2 my-grid-sm-1 my-gap-3">
 
                         <!-- banner item -->
                         <div class="left item my-flex-center my-justify-start my-px-5">
@@ -5601,7 +5611,7 @@
 
                 <div class="my-flex-between header">
                     <h3>Notification</h3>
-                    <button class="my-fw-bold"><span>Mark all</span></button>
+                    <button class="my-fw-bold my-btn my-btn-outline"><span>Mark all</span></button>
                 </div>
 
                 <div class="all-notification my-has-scrollbar my-mt-0">
